Fix plagiarism overflow issues on Chrome

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
@@ -2,7 +2,8 @@
     height: 100%;
     overflow-y: auto;
     padding: 0.5rem;
-    white-space: pre-wrap;
+    white-space: pre;
+    word-wrap: normal;
 
     &.no-file {
         opacity: 0.5;
